# midipad

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_common.cpp  app_common.h  declaration.cpp  declaration.h  main.cpp  midi_defines.h
main/device/: settings.h
main/resources/: img_rgb565.h
main/task/: app_display_task.cpp  app_input_task.cpp  app_led_task.cpp  app_midi_task.cpp  app_task.h
